export interface ImprintData {
  name: string;
  street: string;
  postalcode: string;
  number: string;
  email: string;
  headOfOffice: string;
  disclaimer: string;
}
